# controller/badge.go
@@ -21,20 +21,20 @@ var (
 )
 
 // CreateBadge godoc
-//
 //	@BasePath	/v01
 //	@Schemes
 //	@Summary		사용자 위치를 참고해서 Dynamic NFT 뱃지를 발급하는 함수
-//	@Tags			CreateBadge
+//	@Tags			CreateBadge(뱃지 발급)
 //	@Description	위도, 경도를 입력받고 해당하는 나라의 리소스(ipfs uri, nft metadata)를 참고해서 뱃지를 발급해줍니다.
 //	@name			CreateBadge
 //	@Accept			json
 //	@Produce		json
-//	@Param			walletAccount	path	string 	 	true	"walletAccount"
-//	@Param			latitude		path	string 	 	true	"latitude"
+//	@Param			walletAccount	path	string 	 	true	"walletAccount",
+//	@Param			latitude		path	string 	 	true	"latitude",
 //	@Param			longitude		path	string	    true	"longitude"
 //	@Router			/v01/badge/issue [post]
 //	@Success		200	{object}	string
+
 func (p *Controller) CreateBadge(c *gin.Context) {
 
 	if err := c.ShouldBindJSON(&encyDnft); err != nil {
@@ -89,11 +89,11 @@ func (p *Controller) CreateBadge(c *gin.Context) {
 
 }
 
-// CreateBadge godoc
+// GetMyBadge godoc
 //
 //	@BasePath		/v01
 //	@Summary		내가 발급한 뱃지를 가져오는 함수
-//	@Tags			GetMyBadge
+//	@Tags			GetMyBadge(나의 뱃지 가져오기)
 //	@Description	사용자 위치를 참고해서 뱃지를 발급하는 함수
 //	@name			GetMyBadge
 //	@Accept			json
